# repoindex-analyzer-python

./: README.md  pyproject.toml
src/repoindex_analyzer_python/: __init__.py
tests/: test_python_package.py
