[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoindex-analyzer-python"
version = "0.1.0"
description = "First-party Python analyzer plugin for repoindex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "repoindex",
]

[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "pytest",
    "ruff",
]

[project.entry-points."repoindex.analyzers"]
python = "repoindex_analyzer_python:build_analyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repoindex_analyzer_python = ["py.typed"]
