[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoindex-analyzer-python"
version = "2.0.0"
description = "First-party Python analyzer plugin for repoindex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "repoindex>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "pytest",
    "ruff",
]

[project.entry-points."repoindex.analyzers"]
python = "repoindex_analyzer_python:build_analyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repoindex_analyzer_python = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
